--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">GuardianMessenger</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="register_new_user">Register New User</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
 </resources>
