--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="register_new_user">Register New User</string>
     <string name="register">Register</string>
     <string name="login">Login</string>
+    <string name="login_subtitle">Please login with your credentials</string>
 </resources>
