Added Chat functionality for two users. Setup adapters and search page for creating chat.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,7 @@
     <string name="manage_account">Manage Account</string>
     <string name="update_acct">Update Account</string>
     <string name="delete_acct">Delete Account</string>
-
-
-
+    <string name="search_users">Search Users</string>
 
 
 </resources>
