--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="submit_request">Submit Request</string>
     <string name="enter_the_id_of_the_employee_you_would_like_premission_to_message_below">Enter the id of the employee you would like premission to message below</string>
     <string name="outreach_page">Outreach Page</string>
-    <string name="back_button">Back Button</string>
+    <string name="back">Go back</string>
 
 
 </resources>
