--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,11 @@
     <string name="enter_the_id_of_the_employee_you_would_like_premission_to_message_below">Enter the id of the employee you would like premission to message below</string>
     <string name="outreach_page">Outreach Page</string>
     <string name="back">Go back</string>
+    <string name="name">name</string>
+    <string name="position">position</string>
+    <string name="department">Department</string>
+    <string name="salary">Salary</string>
+    <string name="age">age</string>
 
 
 </resources>
