--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="outreach">Outreach</string>
     <string name="enter_employee_id">Enter employee id</string>
     <string name="submit_request">Submit Request</string>
-    <string name="enter_the_id_of_the_employee_you_would_like_permission_to_message_below">Enter the id of the employee you would like permission to message below</string>
+    <string name="enter_the_id_of_the_employee_you_would_like_permission_to_message_below">Enter the email of the employee you would like permission to message below</string>
     <string name="outreach_page">Outreach Page</string>
     <string name="back">Go back</string>
     <string name="name">Name</string>
